# telegBot

./: credentials.json  main.py  pyproject.toml  render.yaml  requirements.txt  veri.csv
yedek dosyalar/: main (copy).py
