[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.2.0",
    "numpy==2.1.3",
    "oauth2client>=4.1.3",
    "opencv-python==4.10.0.84",
    "pandas>=2.2.3",
    "pillow==11.0.0",
    "pytelegrambotapi>=4.27.0",
    "pyzbar==0.1.9",
    "requests>=2.32.3",
]
